networkpolicy_lab/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: backend
  labels:
    run: backend-pod
  name: backend-pod
spec:
  containers:
  - image: alpine
    name: backend-pod
    command: [ "/bin/sh", "-c", "--" ]
    args: [ "while :; do sleep 30; done;" ]
